--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome to Yash Technologies</h1>
+    <h1 class="display-4">Welcome to Yash Technologies on Azure</h1>
     
 </div>
